# moex_parser

./: Pipfile  README.md  parser.py  pyproject.toml
.github/workflows/: codeql-analysis.yml
