[tool.poetry]
name = "moex_parser"
version = "0.1.0"
description = ""
authors = ["Alexey Larionov <iam@lari4.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
loguru = "^0.6.0"
XlsxWriter = "^3.0.2"
win32-setctime = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
